testdata/errors/invalidmain.go
// some comment to move the first line

package foobar

// ERROR: # command-line-arguments
// ERROR: invalidmain.go:3:9: expected main package to have name "main", not "foobar"
